--- a/CafeSit/index.html
+++ b/CafeSit/index.html
@@ -127,7 +127,7 @@
   <section class="menu" id="menu">
     <h1 class="heading">our<span>menu</span></h1>
 
-    <div class="box-conteainer">
+    <div class="box-container">
 
       <div class="box">
         <img src="images/menu-1.png" alt="">
@@ -251,6 +251,71 @@
     </div>
 
   </section>
+
+  <!--review section starts -->
+
+  <section class="review" id="review">
+
+    <h1 class="heading">customer's <span>review</span></h1>
+
+    <div class="box-container">
+
+      <div class="box">
+        <img src="images/quote-img.png" alt="" class="quote">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita soluta cupiditate adipisci eveniet incidunt
+          nulla itaque iure, libero corrupti exercitationem impedit sed quibusdam fuga perferendis et. Vitae incidunt
+          laborum dolore.</p>
+        <img src="images/pic-1.png" class="user" alt="">
+        <h3>john deo</h3>
+        <div class="stars">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star-half-alt"></i>
+        </div>
+      </div>
+
+      <div class="box">
+        <img src="images/quote-img.png" alt="" class="quote">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita soluta cupiditate adipisci eveniet incidunt
+          nulla itaque iure, libero corrupti exercitationem impedit sed quibusdam fuga perferendis et. Vitae incidunt
+          laborum dolore.</p>
+        <img src="images/pic-2.png" class="user" alt="">
+        <h3>john deo</h3>
+        <div class="stars">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star-half-alt"></i>
+        </div>
+      </div>
+
+      <div class="box">
+        <img src="images/quote-img.png" alt="" class="quote">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita soluta cupiditate adipisci eveniet incidunt
+          nulla itaque iure, libero corrupti exercitationem impedit sed quibusdam fuga perferendis et. Vitae incidunt
+          laborum dolore.</p>
+        <img src="images/pic-3.png" class="user" alt="">
+        <h3>john deo</h3>
+        <div class="stars">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star-half-alt"></i>
+        </div>
+      </div>
+
+
+
+    </div>
+
+  </section>
+  <!--review section ends -->
+
+
 
 
   <!-- custom js file link -->
