--- a/CafeSit/index.html
+++ b/CafeSit/index.html
@@ -15,7 +15,6 @@
 
 <body>
   <!-- header section starts -->
-
   <header class="header">
 
     <a href="#" class="logo">
@@ -81,7 +80,6 @@
 
 
   </header>
-
   <!-- header section ends-->
 
   <!-- home section starts-->
@@ -98,7 +96,6 @@
 
 
   <!-- about section starts -->
-
   <section class="about" id="about">
     <h1 class="heading"><span>about</span></h1>
 
@@ -119,11 +116,9 @@
 
     </div>
   </section>
-
   <!-- about section ends -->
 
   <!-- menu section starts -->
-
   <section class="menu" id="menu">
     <h1 class="heading">our<span>menu</span></h1>
 
@@ -173,9 +168,9 @@
 
     </div>
   </section>
-
   <!-- menu section ends -->
 
+  <!--Prducts section start-->
   <section id="products" class="products">
 
     <h1 class="heading"> our <span>Products</span></h1>
@@ -251,9 +246,9 @@
     </div>
 
   </section>
+  <!--Prducts section ends-->
 
   <!--review section starts -->
-
   <section class="review" id="review">
 
     <h1 class="heading">customer's <span>review</span></h1>
@@ -315,7 +310,36 @@
   </section>
   <!--review section ends -->
 
+  <!--Content section starts-->
+  <section class="contact" id="contact">
 
+    <h1 class="heading"><span>contact</span> us </h1>
+
+    <div class="row">
+      <iframe class="map"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30153.788253002993!2d72.82317192638594!3d19.141690210168964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b63aceef0c69%3A0x2aa80cf2287dfa3b!2sJogeshwari%20West%2C%20Bombaim%2C%20Maharashtra%20400047%2C%20%C3%8Dndia!5e0!3m2!1spt-BR!2sbr!4v1674850718500!5m2!1spt-BR!2sbr"
+        allowfullscreen="" loading="lazy"></iframe>
+
+      <form action="">
+        <h3>get in touch</h3>
+        <div class="inputBox">
+          <span class="fas fa-user"></span>
+          <input type="text" placeholder="name">
+        </div>
+        <div class="inputBox">
+          <span class="fas fa-envelope"></span>
+          <input type="text" placeholder="email">
+        </div>
+        <div class="inputBox">
+          <span class="fas fa-phone"></span>
+          <input type="number" placeholder="number">
+        </div>
+        <input type="submit" value="contact row" class="btn">
+      </form>
+
+    </div>
+  </section>
+  <!--Content section ends-->
 
 
   <!-- custom js file link -->
