--- a/CafeSit/index.html
+++ b/CafeSit/index.html
@@ -341,6 +341,56 @@
   </section>
   <!--Content section ends-->
 
+  <!--Blogs section starts-->
+  <section class="blogs" id="blogs">
+
+    <h1 class="heading"> our <span>blogs</span></h1>
+
+    <div class="box-container">
+
+      <div class="box">
+        <div class="image">
+          <img src="images/blog-1.jpeg" alt="">
+        </div>
+        <div class="content">
+          <a href="#" class="title">tasty and refreshing coffee</a>
+          <span>by admin / 21st may, 2011</span>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas tempore eaque neque itaque voluptatem dolores
+            suscipit ea! Eius exercitationem quam, autem magni reiciendis libero ipsum tenetur recusandae odit,
+            doloremque amet?</p>
+          <a href="" class="btn">read more</a>
+        </div>
+      </div>
+      <div class="box">
+        <div class="image">
+          <img src="images/blog-2.jpeg" alt="">
+        </div>
+        <div class="content">
+          <a href="#" class="title">tasty and refreshing coffee</a>
+          <span>by admin / 21st may, 2011</span>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas tempore eaque neque itaque voluptatem dolores
+            suscipit ea! Eius exercitationem quam, autem magni reiciendis libero ipsum tenetur recusandae odit,
+            doloremque amet?</p>
+          <a href="" class="btn">read more</a>
+        </div>
+      </div>
+      <div class="box">
+        <div class="image">
+          <img src="images/blog-3.jpeg" alt="">
+        </div>
+        <div class="content">
+          <a href="#" class="title">tasty and refreshing coffee</a>
+          <span>by admin / 21st may, 2011</span>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas tempore eaque neque itaque voluptatem dolores
+            suscipit ea! Eius exercitationem quam, autem magni reiciendis libero ipsum tenetur recusandae odit,
+            doloremque amet?</p>
+          <a href="" class="btn">read more</a>
+        </div>
+      </div>
+
+    </div>
+  </section>
+  <!--Blogs section ends-->
 
   <!-- custom js file link -->
   <script src="index.js"></script>
